--- a/index.html
+++ b/index.html
@@ -10,16 +10,74 @@
    
 </head>
 <body>
-   <section>
+    <!-- top section start  -->
+   <section class="top-banner">
     <div class="haf-width">
         <h1>Welcome to</h1>
-        <h1> <span class="name-heiglight">Minhaz </span> Website</h1>
+        <h1> <span class="orange-heiglight">Minhaz </span> Website</h1>
         <h3>World Class Professional Web developer</h3>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi ipsum maiores consequatur necessitatibus odit iure harum at consequuntur sunt earum sapiente, voluptas excepturi nobis! Vero voluptatem optio ipsum praesentium beatae.</p>
+        <a class="link-bution" target="_blank" href="https://www.linkedin.com/in/minhaz-uddin-9546b012b/">HIRE ME</a>
     </div>
         <div class="haf-width">
             <img src="images/profile1.png" alt="">
         </div>
    </section>
+   <!-- top section End  -->
+   <!-- dram area start-->
+   <section class="dram-area">
+       <div class="haf-width">
+        <img src="images/profile.png" alt="profile">
+       </div>
+
+       <div class="haf-width">
+            <h1>Dream Big</h1>
+        <h3 class="orange-heiglight">Become a web developer</h3>
+        <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+        <a class="link-bution" target="_blank" href="https://www.linkedin.com/in/minhaz-uddin-9546b012b/">DOWNLOAD RESUME</a>
+       </div>
+   </section>
+<!-- dram area end-->
+
+<section class="expereance-area">
+    <h2 class="experience-text">Experiences</h2>
+    <div class="haf-width ex-box-shadow">
+        <h2>Full Stack Web dev</h2>
+        <h3 class="orange-heiglight">2021 - present | pro level web developer</h3>
+        <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+    </div>
+    <div class="haf-width ex-box-shadow">
+        <h2>Begenar Web dev</h2>
+        <h3 class="orange-heiglight">2020-2021 | begener web developer</h3>
+        <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+    </div>
+</section>
+
+<section class="service-area">
+    <h1>My Serives</h1>
+    <div class="service-item">
+        <img src="images/product-1.png" alt="">
+        <h2>Responsive Web Design</h2>
+        <h3 class="orange-heiglight">2020-2021 | begener web developer</h3>
+        <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+    </div>
+    <div class="service-item">
+        <img src="images/product-2.png" alt="">
+        <h2>Responsive Web Design</h2>
+        <h3 class="orange-heiglight">2020-2021 | begener web developer</h3>
+        <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+    </div>
+    <div class="service-item">
+        <img src="images/product-3.png" alt="">
+        <h2>Responsive Web Design</h2>
+        <h3 class="orange-heiglight">2020-2021 | begener web developer</h3>
+        <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+    </div>
+</section>
+
+
+<footer class="footer-area">
+    <p>© Peter Parker 2021, a Programming Hero initiative. <br> <span class="orange-heiglight"> Developed by Minhaz Uddin</span></p>
+</footer>
 </body>
 </html>
