--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
 <section class="service-area">
     <h1>My Serives</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad reprehenderit reiciendis voluptatum magnam obcaecati ut quo, voluptatem saepe quaerat nesciunt fuga, consequuntur maiores labore odio iste eius? Quae, nisi id.</p>
     <div class="service-item">
         <img src="images/product-1.png" alt="">
         <h2>Responsive Web Design</h2>
